src/test/deca/syntax/invalid/ident_var3.deca
//Description
//    Vérifier les noms d'ident uniques
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
int else = 3;
}
